--- a/Project/JavascriptDaily/jsTest01.html
+++ b/Project/JavascriptDaily/jsTest01.html
@@ -3,22 +3,11 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>DailyTest</title>
-<!--
-    <script src='main.js'></script>  
-    
--->
+    <title>管理系统</title>
 </head>
 <body>
-    <p id="First">
-        <p id="second">2</p>
-        <p id="third">3</p>
-        <p id="fourth">4</p>
-    </p>
-    
+   <h1 id = "title">管理系统</h1>
+   <p id="name">用户名：</p>
+   <p id="password">密码：</p>
 </body>
-<script>
-    document.write(Date());
-    document.getElementById("First").innerHTML = "first";
-</script> 
 </html>
