--- a/Project/JavascriptDaily/login.html
+++ b/Project/JavascriptDaily/login.html
@@ -14,7 +14,6 @@
     #content {
         background-color: grey;
         color: aliceblue;
-        height: 400px;
         text-align: center;
     }
 
@@ -24,8 +23,7 @@
         text-align: center;
     }
     #login {
-        background-color: black;
-        height: 300px;
+        background-color:bisque;
     }
 </style>
 <body>
@@ -34,9 +32,9 @@
     </div>
    
     <div id="content">
-        <div id="login">
+        <form action="">
             <div>
-                账号：<input type="text" name="userAccount" id="userAccount">
+            账号：<input type="text" name="userAccount" id="userAccount" >
             </div>
             <div>
                 密码：<input type="password" name="userPassword" id="userPassword">
@@ -44,7 +42,7 @@
             
             <input type="button" value="注册">
             <input type="submit" value="登陆">
-        </div>
+        </form>
     </div>
 
     <div id="footer">
