--- a/Project/FrontEndProjects/html/test.html
+++ b/Project/FrontEndProjects/html/test.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="/Project/FrontEndProjects/js/login.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <p>JavaScript 能够直接写入 HTML 输出流中：</p>
-    <script>
-        document.write("<h1>this is 1 document text.</h1>");
-        document.write("<p>this is 2 document text.</p>");
-    </script>
-    <p>
-        您只能在 HTML 输出流中使用
-        <strong>document.write("<h1>this is 3 document text.</h1>");
-        </strong>
+    <p id="tag_p">
+        这是改变之前的内容
     </p>
+    <input type="text" name="accountName" id="accountName">
+    <button type="button" onclick="myFunction()">改变内容点击这里</button>
+
 </body>
 </html>
